# func-core-feature-example

./: Cargo.toml  Licence.md  README.md
migrations/: 20250418160420_init.sql
src/: lib.rs  main.rs
src/features/: mod.rs
src/features/track_asset/: handler.rs  logic.rs  mod.rs  model.rs  tests.rs
src/shared/: db.rs  error.rs
tests/: track_asset_api.rs
