[package]
name = "asset-tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
dotenvy = "0.15"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.140"



